// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spin if indicator set null should not be render default indicator 1`] = `
<Spin
  indicator={null}
  size="default"
  spinning={true}
  wrapperClassName=""
>
  <div
    className="ant-spin ant-spin-spinning"
  />
</Spin>
`;

exports[`Spin rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-spin ant-spin-spinning ant-spin-rtl"
>
  <span
    class="ant-spin-dot ant-spin-dot-spin"
  >
    <i
      class="ant-spin-dot-item"
    />
    <i
      class="ant-spin-dot-item"
    />
    <i
      class="ant-spin-dot-item"
    />
    <i
      class="ant-spin-dot-item"
    />
  </span>
</div>
`;

exports[`Spin should render custom indicator when it's set 1`] = `
<div
  class="ant-spin ant-spin-spinning"
>
  <div
    class="custom-indicator ant-spin-dot"
  />
</div>
`;

exports[`Spin should support static method Spin.setDefaultIndicator 1`] = `
<Spin
  size="default"
  spinning={true}
  wrapperClassName=""
>
  <div
    className="ant-spin ant-spin-spinning"
  >
    <em
      className="custom-spinner ant-spin-dot"
    />
  </div>
</Spin>
`;
